# ABS-Client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
api/: api.py  book.py  credentials.py  library.py  play_book.py  session.py  stream.py
app/: App.py  BookScreen.py  HomeScreen.py  LoginScreen.py  Player.py  Player_UI.py  StreamPlayer.py
styles/: book_detail.qss  home.qss  login.qss  player.qss
tests/: SimplePlayer.py  login_test.py  playback_test.py  simple_player.py
